--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/springio2016
 spring.datasource.username=jsug
 spring.datasource.password=jsug
+
+# Spring Security
+security.basic.enabled=false
