--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<hibernate.version>5.1.0.Final</hibernate.version>
+		<hibernate-search.version>5.5.3.Final</hibernate-search.version>
+		<hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
 	</properties>
 
 	<dependencies>
@@ -78,6 +81,25 @@
 			<version>1.16.6</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- Hibernate -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-java8</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
+
+		<!-- Hibernate Search -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-search-orm</artifactId>
+			<version>${hibernate-search.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-search-infinispan</artifactId>
+			<version>${hibernate-search.version}</version>
+		</dependency>
+
 		<!-- WebJars -->
 		<dependency>
 			<groupId>org.webjars</groupId>
