--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,11 @@
 			<artifactId>tinymce</artifactId>
 			<version>4.3.7</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
