--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
 			<version>${hibernate-search.version}</version>
 		</dependency>
 
+		<!-- Hibernate Metamodel -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+			<version>5.1.0.Final</version>
+		</dependency>
+
 		<!-- WebJars -->
 		<dependency>
 			<groupId>org.webjars</groupId>
