--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=jsug
 
 # Spring Security
 security.basic.enabled=false
+
+# Hibernate
+spring.jpa.properties.hibernate.show_sql=true
